nav alignment fix

--- a/css/custom.css
+++ b/css/custom.css
@@ -78,7 +78,7 @@ a .project-inner:hover {
     color:#4a1dff;
     width: 100%;
     font-family: 'hensa', 'work sans';
-    /*font-weight: 600;*/
+    font-weight: 400;
     white-space: nowrap
 
 }
@@ -314,6 +314,11 @@ a .project-inner:hover {
 .ps-logo {
     width: 400px;
     padding: 50px 0;
+}
+
+.page-container .row {
+    padding: 0;
+    margin: 0 !important;
 }
 /*End Ps.html CSS*/
 
